<resources>
    <string name="app_name">ProjectoFinal_STI</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="txt_login">Iniciar</string>
    <string name="txt_help">¿No tiene cuenta?,</string>
    <string name="txt_link">Crear Cuenta</string>
    <string name="email">Correo Electronico</string>
    <string name="name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="passwordConfirm">Confirmar Contraseña</string>
    <string name="txt_accept">Aceptar</string>
    <string name="txt_title_toolbar">Crear Cuenta</string>
    <string name="id_txt_username_cad">Andres Felipe</string>
    <string name="str_tab_search">Buscar</string>
    <string name="str_tab_home">Inicio</string>
    <string name="str_tab_profile">Perfil</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title_toolbar_Container">Transporte SIT</string>
    <string name="str_btn_profile_route">Rutas</string>
    <string name="str_btn_profile_picks">Fotos</string>
    <string name="txt_title_toolbar_profile">Perfil</string>
    <string name="str_profile_name">Keneth</string>
    <string name="str_profile_lastName">Riascos</string>
    <string name="str_profile_address">Crr 2 # 26 -14</string>
    <string name="str_profile_txt_address">Direccion</string>
    <string name="txt_field_vaccant">Espacios Vacíos</string>
    <string name="txt_validation_login">Bienvenido</string>
    <string name="txt_no_validation_login">Usuario y Contraseña Erroneos</string>
    <string name="txt_password_validation">Password diferente</string>
    <string name="txt_succesfully_account">Cuenta Creada Exitosamente</string>
    <string name="txt_sign_off">Cerrando Sesión</string>
    <string name="btn_fragment_profile_sign_off">Cerrar Sesión</string>
    <string name="txt_title_toolbar_search">Busca tu Ruta</string>
    <string name="Name_user">Pedro Barros</string>
    <string name="str_profile_Info">Usuario del SIT, recidencia acutal en San Juan de Pasto en el barrio Panoramico</string>
    <string name="info_profile2">PROFESIÓN U OFICIO: Estudiante de Ing. de Sistemas en la IU Cesmag</string>
    <string name="str_profile_data">Informacion Personal</string>
    <string name="info_profile_born">FECHA DE NACIMIENTO: Marzo 25 de 1997</string>
    <string name="info_profile_Route">RUTA DE PREFERENCIA: C15</string>
    <string name="info_city">CIUDAD DE ORIGEN: San Juan de Pasto</string>
    <string name="info_profile_photo">Fotos</string>
    <string name="Ventana_search">Buscar</string>
    <string name="Info_Search">Busca tu ruta del SIT</string>
    <string name="txt_home_info">Usuarios del sistemas SIT</string>
</resources>
