<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andresteran_i014213.projectofinal_sti.Views.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabelAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabelAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabelAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/usuer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabelAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/paswordAcount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabelAccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/paswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/passwordConfirm" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_accept"
                android:layout_marginTop="20dp"
                android:theme="@style/MyRaisedButton"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>