<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.andresteran_i014213.projectofinal_sti.Views.Fragments.ProfileFragment">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:orientation="vertical"
            android:gravity="bottom"
            android:background="@drawable/negros_blancos_1"
            android:layout_weight="0.1">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/id_profile"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile"
                app:civ_border_width="2dp"
                app:civ_border_color="@android:color/white"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id_txt_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorTexAccount"
                    android:text="@string/Name_user"
                    android:textSize="32dp"
                    android:layout_margin="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/str_profile_lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_margin="12dp"
                    android:text="@string/str_profile_Info"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/str_profile_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="@color/colorTexAccount"
                    android:textAlignment="gravity"
                    android:paddingBottom="12dp"
                    android:text="@string/str_profile_data"/>


                <TextView
                    android:id="@+id/id_txt_profile_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/info_city"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:id="@+id/id_txt_profile_Office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/info_profile2"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:id="@+id/id_txt_profile_Born"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_profile_born"
                    android:textSize="15dp"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:id="@+id/id_txt_profile_Route"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_profile_Route"
                    android:textSize="15dp"
                    android:paddingBottom="8dp"/>


                <TextView
                    android:id="@+id/id_txt_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_profile_photo"
                    android:textColor="@color/colorTexAccount"
                    android:textSize="25dp"
                    android:paddingBottom="2dp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/id_img_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fiesta"
                    android:paddingBottom="12dp"
                    />
                <ImageView
                    android:id="@+id/id_img_profile_photo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ciclismo"
                    />
                <ImageView
                    android:id="@+id/id_img_profile_photo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stun"
                    />






            </LinearLayout>




            <Button
                android:id="@+id/id_btn_fragment_profile_Sign_off"
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_fragment_profile_sign_off"
                android:theme="@style/MyRaisedButton"/>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/edit_48"/>


</android.support.design.widget.CoordinatorLayout>
